kubernetes/apps/flux-system/policies/allow-flux-reconcile.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-flux-reconcile
  namespace: flux-system
spec:
  terms:
    - endpointSelector:
        matchLabels:
          app.kubernetes.io/name: flux-operator
      ingress:
    - fromEndpoints:
        - {}
  egress:
    - toFQDNs:
        - matchName: ghcr.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: quay.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
